Changelog
=========


1.0.1 (unreleased)
------------------

- Nothing changed yet.


1.0.0 (2013-08-12)
------------------

- Added dexterity support.
  [phgross]

- Initial implementation
  [jone]