@@ -5,7 +5,8 @@ Changelog
 1.0.1 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Added modification date setter for PloneObject Builders.
+  [phgross]
 
 
 1.0.0 (2013-08-12)
